--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="shortcut icon" href="./img/apple2.png" type="image/x-icon">
     <link href="https://cdn.jsdelivr.net/npm/remixicon@2.5.0/fonts/remixicon.css" rel="stylesheet">
     <title>Sucolento</title>
     <link rel="stylesheet" href="./css/style.css">
@@ -21,7 +22,7 @@
                         <a href="#" class="nav__link">Home</a>
                     </li>
                     <li class="nav__item">
-                        <a href="#" class="nav__link">About</a>
+                        <a href="#" class="nav__link">Sobre</a>
                     </li>
                     <li class="nav__item">
                         <a href="#" class="nav__link">Serviços</a>
